force-app/main/default/objects/SBQQ__SummaryVariable__c/fields/SBQQ__AggregateField__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__AggregateField__c</fullName>
        <description>Quote Line field that&apos;s acted upon by the aggregate function.</description>
        <inlineHelpText>Quote Line field that&apos;s acted upon by the aggregate function.</inlineHelpText>
        <label>Aggregate Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quantity</fullName>
                </value>
                <value>
                    <fullName>CustomQuantity__c</fullName>
                </value>
                <value>
                    <fullName>Annual_Recurring_Revenue__c</fullName>
                </value>
                <value>
                    <fullName>CM_Discount__c</fullName>
                </value>
                <value>
                    <fullName>Total_Dollar_Discount__c</fullName>
                </value>
                <value>
                    <fullName>QL_Matches_Quote_End_Date__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>