force-app/main/default/objects/SBQQ__SummaryVariable__c/fields/SBQQ__AggregateFunction__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__AggregateFunction__c</fullName>
        <description>Aggregate function used to calculate this variable.</description>
        <inlineHelpText>Aggregate function used to calculate this variable.</inlineHelpText>
        <label>Aggregate Function</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Count</fullName>
                </value>
                <value>
                    <fullName>Sum</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Min</fullName>
                </value>
                <value>
                    <fullName>Max</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>