force-app/main/default/objects/SBQQ__SummaryVariable__c/fields/SBQQ__CombineWith__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__CombineWith__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Another variable to compose with this variable to produce the final result.</description>
        <inlineHelpText>Another summary variable to compose with this summary variable if your condition is based on both results.</inlineHelpText>
        <label>Variable Element</label>
        <referenceTo>SBQQ__SummaryVariable__c</referenceTo>
        <relationshipLabel>Composed By</relationshipLabel>
        <relationshipName>CombinedBy</relationshipName>
        <type>Lookup</type>
    </CustomField>