force-app/main/default/objects/SBQQ__SummaryVariable__c/fields/SBQQ__CompositeOperator__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__CompositeOperator__c</fullName>
        <description>Operator to use in composing this variable with another variable or value to produce final result used in rules.</description>
        <inlineHelpText>Specify how this variable should be composed with Variable Element or Value Element.</inlineHelpText>
        <label>Composite Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Add</fullName>
                </value>
                <value>
                    <fullName>Subtract</fullName>
                </value>
                <value>
                    <fullName>Multiply</fullName>
                </value>
                <value>
                    <fullName>Divide</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>