force-app/main/default/objects/SBQQ__SummaryVariable__c/fields/SBQQ__ConstraintField__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ConstraintField__c</fullName>
        <description>The field that will limit records further based on a quote field.</description>
        <inlineHelpText>If you want to limit records further based on a quote field, select the field that you want to match against the same field on the quote.</inlineHelpText>
        <label>Constraint Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Type</fullName>
                </value>
                <value>
                    <fullName>Status</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>