force-app/main/default/objects/SBQQ__SummaryVariable__c/fields/SBQQ__FilterField__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__FilterField__c</fullName>
        <description>Items that are filtered for inclusion in this summary variable.</description>
        <inlineHelpText>Select the field to use when filtering items for inclusion in this summary variable.</inlineHelpText>
        <label>Filter Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product Code</fullName>
                </value>
                <value>
                    <fullName>Product Family</fullName>
                </value>
                <value>
                    <fullName>CustomQuantity__c</fullName>
                </value>
                <value>
                    <fullName>SBQQ__LowerBound__c</fullName>
                    <label>Lower Bound</label>
                </value>
                <value>
                    <fullName>SBQQ__UpperBound__c</fullName>
                </value>
                <value>
                    <fullName>QL_Matches_Quote_End_Date__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>