force-app/main/default/objects/SBQQ__SummaryVariable__c/fields/SBQQ__FilterValue__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__FilterValue__c</fullName>
        <description>The value that matches this filter.</description>
        <inlineHelpText>Enter the value to match in this filter.</inlineHelpText>
        <label>Filter Value</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>