force-app/main/default/objects/SBQQ__SummaryVariable__c/fields/SBQQ__ValueElement__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ValueElement__c</fullName>
        <description>Value used by Composite Operator in composing final result for this variable.</description>
        <inlineHelpText>Enter value to use in composing operation.</inlineHelpText>
        <label>Value Element</label>
        <precision>16</precision>
        <scale>4</scale>
        <type>Number</type>
    </CustomField>