force-app/main/default/objects/SBQQ__SummaryVariable__c/listViews/SBQQ__All.listView-meta.xml
<ListView>
        <fullName>SBQQ__All</fullName>
        <columns>NAME</columns>
        <columns>SBQQ__Scope__c</columns>
        <columns>SBQQ__AggregateField__c</columns>
        <columns>SBQQ__AggregateFunction__c</columns>
        <columns>SBQQ__Operator__c</columns>
        <columns>SBQQ__FilterField__c</columns>
        <columns>SBQQ__FilterValue__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </ListView>